set(TITLE bench_c)

IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") # Mac OS X

set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -pthread -D_REENTRANT -fPIC" )

ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")

IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux") # Linux

set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -pthread -lrt -D_REENTRANT -fPIC" )

ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")

set(SOURCES bench.c)

FILE( GLOB LIBCMDLINE_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h" )
INSTALL( FILES ${LIBCMDLINE_HEADERS} DESTINATION include)

add_executable(${TITLE} ${SOURCES})
target_link_libraries( ${TITLE} ringbuffer )

INSTALL( TARGETS ${TITLE} DESTINATION lib )